
[metadata]
name = mira-multiome
version = attr: mira.__version__
description = Single-cell multiomics data analysis
long_description = file: README.rst
license = BSD3 License
classifiers =
    License :: OSI Approved :: BSD License
    Environment :: Console
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.8.0,<2
    pyro-ppl>=1.5.2,<2
    networkx>=2.3,<3
    optuna>=2.8,<3
    anndata>=0.7.6,<1
    MOODS-python>=1.9.4.1
    pyfaidx>=0.5,<1
    matplotlib>=3.4,<4
    lisa2>=2.3.0
    requests>=2,<3
    tqdm
    tensorboard

[options.extras_require]
docs =
    sphinx>=4
    nbsphinx
    sphinx-panels
    pydata-sphinx-theme
    sphinx-copybutton
    numpydoc
    ipython

[options.package_data]
* = *.jaspar, *.ini, Snakefile

[options.entry_points]
console_scripts =
    mira-preprocess = mira.preprocessing.cli:main

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    miscdocs*